[package]
name = "lettre-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
lettre = { version = "0.11.2", features = ["tokio1-native-tls"] }
tokio = { version = "1.35.0", features = ["full"] }
